# crewai-mcp-dnd

./: .env.example  .gitignore  README.md  actor_crew.py  character_crew.py  edit_field_test.py  environment_crew.py  pyproject.toml  pytest.ini  read_entity_test.py  requirements.txt  search_crew.py  search_manual.py  stat_block_crew.py  stdio_client_demo.py  telemetry_test_crewai.py  telemetry_test_crewai_span.py  telemetry_test_openai.py  tool_calls_log.json
constants/: paths.py
crews/creation/: environment.py
crews/research/: research_agent.py  research_task.py
crews/saving/: saving.py
instrumentation/: langfuse.py
output/errotin/: game_information.json
output/errotin/character/: Aegua.a_smarmy_sinner.04229dd4-6613-4c25-a591-60300bc339b3.json  Aentzheigkeishcrast.a_wild-eyed_siccopha.eca9aecd-dfa3-4308-b621-b2f4a05cbad3.json  Aicashflueau.an_ancient_ent.19bcc8df-2c6d-4035-be8f-08f36d65d9f3.json  Aima.a_green_goblin.e361ebce-aa8b-405c-828b-05646b7951bc.json  Bluaer.a_spider_head_on_a_p.7105ece9-f99e-45d9-a726-9346729c4ac6.json  Bruaplueshee.a_greedy_sociopath.595d90dc-2452-4cd5-8e50-aea0a1f17f5c.json  Ceeoarkzhiwoor.a_handless_ghoul.0ef3cfe4-73f3-4f83-a373-c3d0b7fdb61f.json  (+32 more)
servers/: character_maker.py  dice_server.py  game_entity_maker.py  json_file_tool.py  stat_block_maker.py
servers/character_creator/: character.py  name_generator.py  test_character_schema.py
servers/environments/: environments.py
servers/file_utils/: file_utils_test.py  filename.py  json.py  path.py  ripgrep.py
servers/utils/: logging.py
utils/: fileutils.py  game.py
(+23 files in other folders)
